# ClawRouter

./: .env.example  .gitignore  API.md  CHANGELOG.md  CLAUDE.md  README.md  config.yaml  fix.md  openclaw.plugin.json  openclaw.security.json  package-lock.json  package.json  scoring_config.json  setup.sh  tsup.config.ts
.tmp-e2e/: e2e.js
docs/: 11-free-ai-models-zero-cost-blockrun.md  cdp-wallet.md  claw-compactor-integration.md  configuration.md  features.md  security-secrets.md  spending-policies-with-letagentpay.md  windows-installation.md
proxy/: .env.example  API.md  ARCHITECTURE.md  clawrouter.service  config.yaml  package-lock.json  package.json
scorer/: pyproject.toml  retrain.py  server.py  subject_patterns.json  weights.json
scripts/: postinstall.mjs  reinstall.sh  setup-clawcredit.sh  setup-config.cjs  smoke-dist.mjs  uninstall.sh  update.sh
src/: auth.ts  balance.ts  builder-code.test.ts  builder-code.ts  clawcredit.ts  cli.ts  config.ts  dhali.ts  doctor.ts  index.agent-cache.test.ts  index.config.test.ts  index.lifecycle.test.ts  index.ts  local-backend.ts  logger.ts  max-tokens.ts  models.test.ts  models.ts  novita-provider.ts  payment-asset.test.ts  payment-asset.ts  payment-preauth.test.ts  payment-preauth.ts  provider.ts  proxy.debrand.test.ts  proxy.max-tokens-cap.test.ts  proxy.max-tokens.test.ts  proxy.merge-routing.test.ts  proxy.models-endpoint.test.ts  proxy.reasoning-header.test.ts  proxy.routing-config-reuse.test.ts  proxy.tool-forwarding.test.ts  proxy.ts  session.ts  solana-balance.ts  stats.ts  textual-tool-calls.test.ts  (+10 more)
(+57 files in other folders)
